* Wed Dec 13 2017 Trevor Vaughan <tvaughan@onyxpoint.com> - 6.0.5-0
- Enforce limits set in /etc/login.defs for uid_min and uid_max by default and
  fall back to something sensible for SSSD

* Mon Sep 18 2017 Lucas Yamanishi <lucas.yamanishi@onyxpoint.com> - 6.0.4-0
- Set minimum length on sssd::domains

* Mon Sep 11 2017 Judy Johnson <judy.johnson@onyxpoint.com> - 6.0.3-0
- Only enable 'try_inotify' if explicitly set

* Wed Aug 30 2017 Nick Markowski <nmarkowski@keywcorp.com> - 6.0.3-0
- Sssd::DebugLevel now handles all variants specfied in sssd.conf man page
- All instances of debug_level are now typed as Sssd::DebugLevel

* Thu Jul 06 2017 Liz Nemsick <lnemsick.simp@gmail.com> - 6.0.2-0
- Confine puppet version in metadata.json

* Fri Apr 07 2017 Trevor Vaughan <tvaughan@onyxpoint.com> - 6.0.1-0
- Worked around a bug in EL6 where the ldap client library incorrectly handles
  128 bit ciphers in the cipher list

* Fri Mar 17 2017 Clayton Mentzer, Liz Nemsick 6.0.0-1
- Updated README
- Update puppet version in .travis.yaml

* Thu Feb 09 2017 Jeanne Greulich <jeanne.greulich@onyxpoint.com> - 6.0.0-0
- Changed type of debug level to be consistent for all modules.

* Mon Jan 23 2017 Trevor Vaughan <tvaughan@onyxpoint.com> - 6.0.0-0
- Migrated to using puppetlabs-concat
- Added support for Active Directory Domains

* Thu Jan 12 2017 Nick Markowski <nmarkowski@keywcorp.com> - 6.0.0-0
- Updated to use new pki scheme.
- Application certs now managed in /etc/pki/simp_apps/sssd/x509
- Strongly typed

* Mon Dec 19 2016 Jeanne Greulich <jgreulich@onyxpoint.com> - 6.0.0-0
- Update Global Catalysts

* Wed Nov 23 2016 Jeanne Greulich <jgreulich@onyxpoint.com> - 5.0.0-0
- Fix dependancies for simp 6 bump

* Mon Nov 21 2016 Chris Tessmer <chris.tessmer@onyxpoint.com> - 5.0.0-0
- Updated to compliance_markup version 2

* Fri Sep 30 2016 Trevor Vaughan <tvaughan@onyxpoint.com> - 5.0.0-0
- Updated to use the version of 'simpcat' that does not conflict with
  'puppetlabs/concat'.
