@@ -1,4 +1,7 @@
-* Wed Dec 13 2017 Trevor Vaughan <tvaughan@onyxpoint.com> - 6.0.5-0
+* Fri Dec 08 2017 Liz Nemsick <lnemsick.simp@gmail.com> - 6.1.0-0
+- Leveraged PR from Mark Fitch to add ima provider configuration
+
+* Wed Dec 13 2017 Trevor Vaughan <tvaughan@onyxpoint.com> - 6.1.0-0
 - Enforce limits set in /etc/login.defs for uid_min and uid_max by default and
   fall back to something sensible for SSSD
 
